confused about emcee

--- a/homework/AidanBerres/03/hw03.ipynb
+++ b/homework/AidanBerres/03/hw03.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "She used equation 1, defined here: https://arxiv.org/abs/1905.07422\n",
     "\n",
-    "# $ F= \\begin{cases}\\frac{A+\\beta\\left(t-t_0\\right)}{1+e^{-\\left(t-t_0\\right) / \\tau_{\\text {rise }}}} & t<t_1 \\\\ \\frac{\\left(A+\\beta\\left(t_1-t_0\\right)\\right) e^{-\\left(t-t_1\\right) / \\tau_{\\text {fall }}}}{1+e^{-\\left(t-t_0\\right) / \\tau_{\\text {rise }}}} & t \\geq t_1\\end{cases} $"
+    "$$\\Large F= \\begin{cases}\\frac{A+\\beta\\left(t-t_0\\right)}{1+e^{-\\left(t-t_0\\right) / \\tau_{\\text {rise }}}} & t<t_1 \\\\ \\frac{\\left(A+\\beta\\left(t_1-t_0\\right)\\right) e^{-\\left(t-t_1\\right) / \\tau_{\\text {fall }}}}{1+e^{-\\left(t-t_0\\right) / \\tau_{\\text {rise }}}} & t \\geq t_1\\end{cases} $$"
    ]
   },
   {
@@ -126,7 +126,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d1=pd.read_csv('PS1_PS1MD_PSc000098.snana.dat',header=14,sep='\\s+',skipfooter=1,engine='python')\n"
+    "d1=pd.read_csv('PS1_PS1MD_PSc000098.snana.dat',header=14,sep='\\s+',skipfooter=1,engine='python')\n",
+    "d2=pd.read_csv('PS1_PS1MD_PSc000174.snana.dat',header=14,sep='\\s+',skipfooter=1,engine='python')"
    ]
   },
   {
@@ -152,16 +153,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "c95b3e32-4db1-4a0b-98b9-d550f21a5589",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d2=pd.read_csv('PS1_PS1MD_PSc000174.snana.dat',header=14,sep='\\s+',skipfooter=1,engine='python')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "id": "3f9dcdac-a42c-4936-9fd9-5e1935cb4679",
    "metadata": {},
@@ -182,30 +173,210 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "091ef654-cb01-45b9-87ba-05c0f33fa5c2",
+   "metadata": {},
+   "source": [
+    "|Parameter| Description| Prior |\n",
+    "|--------:|-----------:|:------|\n",
+    "|τrise (days) |Rise Time |U(0.01,50)|\n",
+    "|τfall (days) |Decline Time| U(1,300)|\n",
+    "|t0 (MJD) |“Start” Time| U(tmin − 50, tmax + 300)|\n",
+    "|A| Amplitude| U(3σ,100 Fmax)|\n",
+    "|β (flux/day)| Plateau slope| U(−Fmax/150,0)|\n",
+    "|c (flux) |Baseline Flux| U(−3σ,3σ)|\n",
+    "|γ (days) |Plateau duration|(2/3)N(5, 5) + (1/3) N(60, 30) |\n",
+    "\n",
+    "She used equation 1, defined here: https://arxiv.org/abs/1905.07422\n",
+    "\n",
+    "$$\\Large F= \\begin{cases}\\frac{A+\\beta\\left(t-t_0\\right)}{1+e^{-\\left(t-t_0\\right) / \\tau_{\\text {rise }}}} & t<t_1 \\\\ \\frac{\\left(A+\\beta\\left(t_1-t_0\\right)\\right) e^{-\\left(t-t_1\\right) / \\tau_{\\text {fall }}}}{1+e^{-\\left(t-t_0\\right) / \\tau_{\\text {rise }}}} & t \\geq t_1\\end{cases} $$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "d415f66d-4518-4629-8544-06b2332bf22f",
+   "execution_count": 29,
+   "id": "fd7f6a8e-b5ca-4623-b256-01a9505f2665",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.10536051565782628"
+       "Index(['VARLIST:', 'MJD', 'FLT', 'FIELD', 'FLUXCAL', 'FLUXCALERR', 'MAG',\n",
+       "       'MAGERR'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.log()"
+    "d1.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "bd914a4c-7de8-4990-8db3-234964c6df11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fmod(t,A,b,tr,tf,t0,t1):\n",
+    "    if t < t1:\n",
+    "        ug1= A+b*(t-t0)\n",
+    "        ug2=1+np.exp(-(t-t0)/tr)\n",
+    "        \n",
+    "    elif t >= t1:\n",
+    "        ug1 = (A+b*(t1-t0))*np.exp(-(t-t1)/tf)\n",
+    "        ug2 = 1+np.exp((-t-t0)/tr)\n",
+    "    else:\n",
+    "        ug1=-np.inf\n",
+    "        ug2=np.inf\n",
+    "    return ug1/ug2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "214ed90a-76ad-4178-b25d-89567b52a98a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "_piecewise_dispatcher() missing 3 required positional arguments: 'x', 'condlist', and 'funclist'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[48], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpiecewise\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m<__array_function__ internals>:179\u001b[0m, in \u001b[0;36mpiecewise\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: _piecewise_dispatcher() missing 3 required positional arguments: 'x', 'condlist', and 'funclist'"
+     ]
+    }
+   ],
+   "source": [
+    "np.piecewise()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "c0db972e-2a35-49c9-89ea-26e41fb8a842",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def loss(vl,data):\n",
+    "    og=(data.FLUXCAL.values-fmod(data.MJD,vl[0],vl[1],vl[2],vl[3],vl[4],vl[5]))/(2*data.FLUXCALERR.values)\n",
+    "    return og**2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c698c588-2f01-4bf5-ac4c-58b772dc70bc",
+   "metadata": {},
+   "source": [
+    "|Parameter| Description| Prior |\n",
+    "|--------:|-----------:|:------|\n",
+    "|τrise (days) |Rise Time |U(0.01,50)|\n",
+    "|τfall (days) |Decline Time| U(1,300)|\n",
+    "|t0 (MJD) |“Start” Time| U(tmin − 50, tmax + 300)|\n",
+    "|A| Amplitude| U(3σ,100 Fmax)|\n",
+    "|β (flux/day)| Plateau slope| U(−Fmax/150,0)|\n",
+    "|c (flux) |Baseline Flux| U(−3σ,3σ)|\n",
+    "|γ (days) |Plateau duration|(2/3)N(5, 5) + (1/3) N(60, 30) |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "af082e95-97af-42cb-bd6b-d5c5cd6cf4aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ndim=6\n",
+    "nwalkers=20\n",
+    "np.random.seed(10)\n",
+    "starting_guesses = np.zeros((nwalkers, ndim))\n",
+    "# starting_guesses[:, 2] = np.random.uniform(0.01, 1, (nwalkers, 1))\n",
+    "# starting_guesses[:,0] = np.random.uniform((nwalkers,1))\n",
+    "starting_guesses = np.random.uniform(size=(nwalkers,ndim))\n",
+    "starting_guesses;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "7f24dcb4-45e2-41e6-9331-2bc4d196cd0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "emcee: Exception while calling your likelihood function:\n",
+      "  params: [0.77132064 0.02075195 0.63364823 0.74880388 0.49850701 0.22479665]\n",
+      "  args: [    VARLIST:      MJD FLT  FIELD  FLUXCAL  FLUXCALERR    MAG  MAGERR\n",
+      "0       OBS:  54980.4   g    NaN    0.258      10.339 -3.527  43.594\n",
+      "1       OBS:  54993.3   g    NaN   -3.994      12.945    NaN  -3.519\n",
+      "2       OBS:  54996.3   g    NaN  -17.450      14.218    NaN  -0.885\n",
+      "3       OBS:  54999.3   g    NaN   25.615      15.484 -8.521   0.656\n",
+      "4       OBS:  55002.3   g    NaN   20.129      15.184 -8.260   0.819\n",
+      "..       ...      ...  ..    ...      ...         ...    ...     ...\n",
+      "396     OBS:  56453.3   z    NaN   -1.486      30.258    NaN -22.111\n",
+      "397     OBS:  56456.3   z    NaN   46.901      27.163 -9.178   0.629\n",
+      "398     OBS:  56459.3   z    NaN   19.229      26.180 -8.210   1.478\n",
+      "399     OBS:  56681.6   z    NaN   -9.721      25.122    NaN  -2.806\n",
+      "400     OBS:  56754.4   z    NaN   21.699      26.886 -8.341   1.345\n",
+      "\n",
+      "[401 rows x 8 columns]]\n",
+      "  kwargs: {}\n",
+      "  exception:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/berres2002/miniconda3/envs/fds/lib/python3.10/site-packages/emcee/ensemble.py\", line 624, in __call__\n",
+      "    return self.f(x, *self.args, **self.kwargs)\n",
+      "  File \"/tmp/ipykernel_11002/1249861120.py\", line 2, in loss\n",
+      "    og=(data.FLUXCAL.values-fmod(data.MJD,vl[0],vl[1],vl[2],vl[3],vl[4],vl[5]))/(2*data.FLUXCALERR.values)\n",
+      "  File \"/tmp/ipykernel_11002/3069645658.py\", line 2, in fmod\n",
+      "    if t < t1:\n",
+      "  File \"/home/berres2002/miniconda3/envs/fds/lib/python3.10/site-packages/pandas/core/generic.py\", line 1527, in __nonzero__\n",
+      "    raise ValueError(\n",
+      "ValueError: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[47], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43memcee\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mEnsembleSampler\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnwalkers\u001b[49m\u001b[43m,\u001b[49m\u001b[43mndim\u001b[49m\u001b[43m,\u001b[49m\u001b[43mloss\u001b[49m\u001b[43m,\u001b[49m\u001b[43margs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43md1\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_mcmc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstarting_guesses\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniconda3/envs/fds/lib/python3.10/site-packages/emcee/ensemble.py:443\u001b[0m, in \u001b[0;36mEnsembleSampler.run_mcmc\u001b[0;34m(self, initial_state, nsteps, **kwargs)\u001b[0m\n\u001b[1;32m    440\u001b[0m     initial_state \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_previous_state\n\u001b[1;32m    442\u001b[0m results \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m--> 443\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m results \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msample(initial_state, iterations\u001b[38;5;241m=\u001b[39mnsteps, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m    444\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[1;32m    446\u001b[0m \u001b[38;5;66;03m# Store so that the ``initial_state=None`` case will work\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniconda3/envs/fds/lib/python3.10/site-packages/emcee/ensemble.py:344\u001b[0m, in \u001b[0;36mEnsembleSampler.sample\u001b[0;34m(self, initial_state, log_prob0, rstate0, blobs0, iterations, tune, skip_initial_state_check, thin_by, thin, store, progress, progress_kwargs)\u001b[0m\n\u001b[1;32m    342\u001b[0m     state\u001b[38;5;241m.\u001b[39mblobs \u001b[38;5;241m=\u001b[39m blobs0\n\u001b[1;32m    343\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m state\u001b[38;5;241m.\u001b[39mlog_prob \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 344\u001b[0m     state\u001b[38;5;241m.\u001b[39mlog_prob, state\u001b[38;5;241m.\u001b[39mblobs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompute_log_prob\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstate\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcoords\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    345\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m np\u001b[38;5;241m.\u001b[39mshape(state\u001b[38;5;241m.\u001b[39mlog_prob) \u001b[38;5;241m!=\u001b[39m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnwalkers,):\n\u001b[1;32m    346\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mincompatible input dimensions\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/miniconda3/envs/fds/lib/python3.10/site-packages/emcee/ensemble.py:489\u001b[0m, in \u001b[0;36mEnsembleSampler.compute_log_prob\u001b[0;34m(self, coords)\u001b[0m\n\u001b[1;32m    487\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    488\u001b[0m         map_func \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmap\u001b[39m\n\u001b[0;32m--> 489\u001b[0m     results \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmap_func\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlog_prob_fn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    491\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    492\u001b[0m     log_prob \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;28mfloat\u001b[39m(l[\u001b[38;5;241m0\u001b[39m]) \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m results])\n",
+      "File \u001b[0;32m~/miniconda3/envs/fds/lib/python3.10/site-packages/emcee/ensemble.py:624\u001b[0m, in \u001b[0;36m_FunctionWrapper.__call__\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m    622\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__call__\u001b[39m(\u001b[38;5;28mself\u001b[39m, x):\n\u001b[1;32m    623\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 624\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    625\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m:  \u001b[38;5;66;03m# pragma: no cover\u001b[39;00m\n\u001b[1;32m    626\u001b[0m         \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtraceback\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[46], line 2\u001b[0m, in \u001b[0;36mloss\u001b[0;34m(vl, data)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mloss\u001b[39m(vl,data):\n\u001b[0;32m----> 2\u001b[0m     og\u001b[38;5;241m=\u001b[39m(data\u001b[38;5;241m.\u001b[39mFLUXCAL\u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m-\u001b[39m\u001b[43mfmod\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mMJD\u001b[49m\u001b[43m,\u001b[49m\u001b[43mvl\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mvl\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mvl\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mvl\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mvl\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mvl\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m)\u001b[38;5;241m/\u001b[39m(\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39mdata\u001b[38;5;241m.\u001b[39mFLUXCALERR\u001b[38;5;241m.\u001b[39mvalues)\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m og\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m\n",
+      "Cell \u001b[0;32mIn[27], line 2\u001b[0m, in \u001b[0;36mfmod\u001b[0;34m(t, A, b, tr, tf, t0, t1)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfmod\u001b[39m(t,A,b,tr,tf,t0,t1):\n\u001b[0;32m----> 2\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m t \u001b[38;5;241m<\u001b[39m t1:\n\u001b[1;32m      3\u001b[0m         ug1\u001b[38;5;241m=\u001b[39m A\u001b[38;5;241m+\u001b[39mb\u001b[38;5;241m*\u001b[39m(t\u001b[38;5;241m-\u001b[39mt0)\n\u001b[1;32m      4\u001b[0m         ug2\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m+\u001b[39mnp\u001b[38;5;241m.\u001b[39mexp(\u001b[38;5;241m-\u001b[39m(t\u001b[38;5;241m-\u001b[39mt0)\u001b[38;5;241m/\u001b[39mtr)\n",
+      "File \u001b[0;32m~/miniconda3/envs/fds/lib/python3.10/site-packages/pandas/core/generic.py:1527\u001b[0m, in \u001b[0;36mNDFrame.__nonzero__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1525\u001b[0m \u001b[38;5;129m@final\u001b[39m\n\u001b[1;32m   1526\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__nonzero__\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m NoReturn:\n\u001b[0;32m-> 1527\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m   1528\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe truth value of a \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is ambiguous. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1529\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUse a.empty, a.bool(), a.item(), a.any() or a.all().\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1530\u001b[0m     )\n",
+      "\u001b[0;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
+     ]
+    }
+   ],
+   "source": [
+    "emcee.EnsembleSampler(nwalkers,ndim,loss,args=[d1]).run_mcmc(starting_guesses, 10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd914a4c-7de8-4990-8db3-234964c6df11",
+   "id": "9be44a84-9968-4cc5-9717-935f426f1786",
    "metadata": {},
    "outputs": [],
    "source": []
