--- a/notes/05/week05_solution.ipynb
+++ b/notes/05/week05_solution.ipynb
@@ -707,9 +707,9 @@
   "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [conda env:yse]",
+   "display_name": "Python [conda env:fds] *",
    "language": "python",
-   "name": "conda-env-yse-py"
+   "name": "conda-env-fds-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -721,7 +721,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.10.9"
   },
   "livereveal": {
    "scroll": true,
@@ -729,5 +729,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
