compared with Table 3

--- a/homework/HaillePerkins/04_midterm/midterm.ipynb
+++ b/homework/HaillePerkins/04_midterm/midterm.ipynb
@@ -167,14 +167,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
     "def model(theta, logP):\n",
     "    bW, mu = theta\n",
     "    \n",
-    "    zp = 25.75 \n",
+    "    zp = 25.75 # was just an estimate - maybe I fit it to find the zp then do all the others\n",
     "    return bW*logP + zp + mu "
    ]
   },
@@ -324,13 +324,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
     "params = []\n",
     "for host in samples:\n",
-    "        params.append(np.percentile(host, 50, axis=0))"
+    "    params.append(np.percentile(host, 50, axis=0))"
    ]
   },
   {
@@ -371,6 +371,81 @@
     "    ax.set_title(title, x=0.2, y=1.0, pad=-25)\n",
     "    ax.set_xlabel(\"log Periods (days)\")\n",
     "    ax.set_ylabel(\"F160W (mag)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Comparing to Table 3:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.87402807, 3.26112201, 3.320995  , 2.37306309, 1.78642078,\n",
+       "       0.51919936, 1.8236436 , 2.31568581, 2.53194062])"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params[:,-1] # the last value in the list in the intercept"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['1309', '3021', '3370', '3982', '4038', '4258', '4536', '4639',\n",
+       "       '5584'], dtype='<U11')"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hosts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\begin{array}{c|c}\n",
+    "\\text{NGC} & \\text{MCMC} & \\text{Table 3} \\\\\n",
+    "\\hline\n",
+    "1309 & 1.874 &  3.276\\\\\n",
+    "3021 & 3.261 & 3.138 \\\\\n",
+    "3370 & 3.321 & 2.835 \\\\\n",
+    "3982 & 2.373 & 2.475 \\\\\n",
+    "4038 & 1.786& 2.396 \\\\\n",
+    "4258 & 0.519 & 0 \\\\\n",
+    "4536 & 1.824 & 1.567 \\\\\n",
+    "4639 & 2.316 & 2.383 \\\\\n",
+    "5584 & 2.532 & 2.461 \\\\\n",
+    "\\end{array}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1309 is the most different, but most are fairly close."
    ]
   },
   {
