--- a/homework/AmandaWasserman/04_midterm/midterm.ipynb
+++ b/homework/AmandaWasserman/04_midterm/midterm.ipynb
@@ -879,8 +879,7 @@
     "Combining:\n",
     "\n",
     "$\\log H_0 = \\frac{(m^0_{\\nu,i}-(\\mu_{0,i}-\\mu_{0,4258})-\\mu_{0,4258})+5a_\\nu+25}{5}=\\frac{m^0_{\\nu,i}-\\mu_{0,i}+5a_\\nu+25}{5}=\\frac{(m^0_{\\nu,i}+5a_\\nu)-\\mu_{0,i}+25}{5}$\n",
-    "\n",
-    "$\\frac{m^0_{\\nu,i}+5a_\\nu-(\\mu_{0,i}+\\mu_{0,4258})-\\mu_{0,4258}+25}{5}$"
+    "\n"
    ]
   },
   {
@@ -901,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,19 +928,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "H =  75.68194262189388 km / (Mpc s)\n"
+      "H =  75.682 km / (Mpc s)\n"
      ]
     }
    ],
    "source": [
-    "print('H = ' , H) "
+    "print('H = ' , np.around(H,3))"
    ]
   },
   {
