--- a/homework/DavidVizgan/HW3/hw03.ipynb
+++ b/homework/DavidVizgan/HW3/hw03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "explicit-investigator",
+   "id": "armed-calculator",
    "metadata": {},
    "source": [
     "# Homework set 3\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informal-monaco",
+   "id": "realistic-frederick",
    "metadata": {},
    "source": [
     "## Problem 1 (100 pts)\n",
@@ -26,8 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "adaptive-newcastle",
+   "execution_count": 293,
+   "id": "growing-submission",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reduced-cathedral",
+   "id": "private-checkout",
    "metadata": {},
    "source": [
     "She used equation 1, defined here: https://arxiv.org/abs/1905.07422\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "terminal-conducting",
+   "id": "chubby-calgary",
    "metadata": {},
    "source": [
     "to model the *flux*, $F$, of a supernova in some band, at times, $t$."
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "authentic-government",
+   "id": "veterinary-bosnia",
    "metadata": {},
    "source": [
     "You can see the fits Ashley derived here:\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "uniform-lighting",
+   "id": "young-poster",
    "metadata": {},
    "source": [
     "As Bayesian's we have 4 questions to answer\n",
@@ -95,8 +95,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "congressional-nomination",
+   "execution_count": 294,
+   "id": "brilliant-ecuador",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,8 +110,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
-   "id": "supported-socket",
+   "execution_count": 295,
+   "id": "attended-haven",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "Text(0, 0.5, 'Flux [arb units]')"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 295,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -160,8 +160,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
-   "id": "confused-highland",
+   "execution_count": 296,
+   "id": "lined-encounter",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "Text(0, 0.5, 'Flux [arb units]')"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -211,8 +211,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "pleased-immune",
+   "execution_count": 297,
+   "id": "about-kennedy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,8 +243,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
-   "id": "amino-spider",
+   "execution_count": 298,
+   "id": "banned-protein",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "valuable-polyester",
+   "id": "strange-haiti",
    "metadata": {},
    "outputs": [
     {
@@ -365,8 +365,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
-   "id": "latin-daughter",
+   "execution_count": 299,
+   "id": "pressing-material",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,8 +397,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
-   "id": "smart-fleece",
+   "execution_count": 300,
+   "id": "restricted-pepper",
    "metadata": {},
    "outputs": [
     {
@@ -422,8 +422,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
-   "id": "indian-macintosh",
+   "execution_count": 301,
+   "id": "invisible-projection",
    "metadata": {},
    "outputs": [
     {
@@ -480,8 +480,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
-   "id": "emerging-marble",
+   "execution_count": 302,
+   "id": "vital-reflection",
    "metadata": {},
    "outputs": [
     {
@@ -551,8 +551,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
-   "id": "absolute-formation",
+   "execution_count": 303,
+   "id": "binding-joining",
    "metadata": {},
    "outputs": [
     {
@@ -616,8 +616,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
-   "id": "international-lesson",
+   "execution_count": 304,
+   "id": "dramatic-mentor",
    "metadata": {},
    "outputs": [
     {
@@ -651,8 +651,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
-   "id": "moderate-rally",
+   "execution_count": 306,
+   "id": "alternate-superintendent",
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-291-3a6aaf0f3b26>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnchains\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnwalkers\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnsteps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mtau\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0memcee\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautocorr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintegrated_time\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnwalkers\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnsteps\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;31m# Plot the integrated autocorrelation time for each parameter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-306-d4088e56b48e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnchains\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnwalkers\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnsteps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mtau\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0memcee\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautocorr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintegrated_time\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnwalkers\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnsteps\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;31m# this isn't working :( and I dont have enough time to finish\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mIndexError\u001b[0m: index 20 is out of bounds for axis 1 with size 20"
      ]
     }
@@ -686,19 +686,13 @@
     "\n",
     "tau = emcee.autocorr.integrated_time(params[:, nwalkers, nsteps])\n",
     "\n",
-    "# this isn't working :( and I dont have enough time to finish\n",
-    "\n",
-    "plt.figure(figsize=[12,12])\n",
-    "plt.plot(np.mean(tau, axis=1))\n",
-    "plt.xlabel('Parameter index')\n",
-    "plt.ylabel('Integrated autocorrelation time')\n",
-    "plt.show()"
+    "# this isn't working :( and I dont have enough time to finish\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "million-silence",
+   "id": "failing-fisher",
    "metadata": {},
    "outputs": [],
    "source": []
