need to figure out zp

--- a/homework/HaillePerkins/04_midterm/midterm.ipynb
+++ b/homework/HaillePerkins/04_midterm/midterm.ipynb
@@ -167,14 +167,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
     "def model(theta, logP):\n",
     "    bW, mu = theta\n",
     "    \n",
-    "    zp = 25.75 # was just an estimate - maybe I fit it to find the zp then do all the others\n",
+    "    zp = 25.75 # was just an estimate - maybe I fit it to find the zp then do all the others - I have done something wrong\n",
+    "    # idk how to determine this while also calculating the intercepts at the same time hmmmmm\n",
     "    return bW*logP + zp + mu "
    ]
   },
