--- a/homework/AmandaWasserman/04_midterm/midterm.ipynb
+++ b/homework/AmandaWasserman/04_midterm/midterm.ipynb
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,14 +911,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "H=0\n",
     "for j,i in enumerate(m5a):\n",
     "    if i!=0:\n",
-    "        temp = 10**((m5a[j]-intercepts-mu4258+25)/5)\n",
+    "        temp = 10**((m5a[j]-intercepts[j]-mu4258+25)/5)\n",
     "        H+=temp\n",
     "    \n",
     "\n",
@@ -930,14 +930,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "H =  75.588 km / (Mpc s)\n"
+      "H =  75.511 km / (Mpc s)\n"
      ]
     }
    ],
