--- a/homework/LiamNolan/04_midterm/midterm.ipynb
+++ b/homework/LiamNolan/04_midterm/midterm.ipynb
@@ -162,9 +162,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:yse]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-yse-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -176,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
