--- a/homework/LiamNolan/03/hw03.ipynb
+++ b/homework/LiamNolan/03/hw03.ipynb
@@ -550,9 +550,9 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python [conda env:fds] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-fds-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
