Minor word corrections

--- a/homework/HaillePerkins/04_midterm/midterm.ipynb
+++ b/homework/HaillePerkins/04_midterm/midterm.ipynb
@@ -136,15 +136,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Here are the prior I utilized:\n",
     "\n",
-    "# fix - explanation\n",
-    "    intercept is the difference in distance moduli - think about how a change in distance moduli relates to change in distance\n",
     "\n",
-    "$zp_{4258}$: $p(zp_{4258}) = U(24,28)$ Based on its distance modulus calculated from the distance provided in the Humphreys et al. 2013. Then gave it some wiggle room around this value.\n",
     "\n",
     "Intercepts $\\mu_{0,i} - \\mu_{0, 4258}$: $p(\\mu_{0,i} - \\mu_{0, 4258}) = U(0,5)$ since the model is with respect to NGC 4258, I've selected this range given the redshifts provided. NGC $4258$ is the closest, and therefore all of the other hosts must have greater distance moduli. Then having an upper limit of $3$ captures objects with redshifts of over 150 times that of NGC $4258$ since redshift is linearly related to distance and distance modulus is logarithmically related to distance.\n",
     "\n",
-    "- However, NGC $4258$  must have an intercept of 0 because it's intercept is $zp$ \n",
+    "$zp_{4258}$: $p(zp_{4258}) = U(24,28)$ Based on its distance modulus calculated from the distance provided in the Humphreys et al. 2013. Then I included a range around it much like see above.\n",
     "\n",
     "Slope $b_W$: $p(b_W) = U(-10, -1)$ - Since magnitudes are backwards, decreasing values mean brighter object and we know that generally that for brighter cepheids they will have longer periods. (explains negative) cannot be zero since the luminoisity is a product of the star's radius changing regularly."
    ]
@@ -180,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -192,6 +190,7 @@
     }
    ],
    "source": [
+    "# index of zp\n",
     "for i, ID in enumerate(hosts):\n",
     "    if ID =='4258':\n",
     "        print(i)"
@@ -349,6 +348,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The posteriors look good, each having a single extrema."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Checking validity of chains"
    ]
   },
@@ -395,7 +401,7 @@
    "source": [
     "#### Figure 7 recreation\n",
     "\n",
-    "##### First, I thinned the chains to get samples that are more independant. Then get the values for the parameters, by taking the median of the flattened chains. "
+    "First, I thinned the chains to get samples that are more independant. Then get the values for the parameters, by taking the median of the flattened chains. "
    ]
   },
   {
