Fixed typo in Q1

--- a/homework/ZacharyStone/Midterm/midterm.ipynb
+++ b/homework/ZacharyStone/Midterm/midterm.ipynb
@@ -87,7 +87,7 @@
     "\n",
     "Using a Gaussian likelihood:\n",
     "\n",
-    "$$ L = \\prod_{i} \\frac{1}{\\sqrt{2\\pi \\sigma_i^2}} \\exp\\left[ \\left( \\frac{y_i - f(x_i)}{\\sigma_i} \\right)^2 \\right] $$\n",
+    "$$ L = \\prod_{i} \\frac{1}{\\sqrt{2\\pi \\sigma_i^2}} \\exp\\left( -\\left( \\frac{y_i - f(x_i)}{\\sigma_i} \\right)^2 \\right) $$\n",
     "for a model $f(x)$ and data $\\{x_i, y_i, \\sigma_i \\}$\n",
     "\n",
     "\n",
